[metadata]
name = qfa
version = 0.1.0
description = Sources for Implementing Quantum Finite Automata Algorithms on Noisy Devices
long_description = file: README.md, LICENSE
license = Apache License 2.0
license-file = LICENSE
author = Utku Birkan
author_email = utku.birkan@gmail.com
home-page = https://gitlab.com/qworld/qresearch/research-projects/qfa-implementation

[options]
packages = find:
setup_requires =
    wheel
install_requires =
    qiskit>=0.20 
    ipykernel
python_version = 3.9
